<resources>
    <string name="app_name">NurJa Alumni</string>
    <string name="title_activity_web">Website Nurul Jadid</string>
    <string name="title_activity_radio">Radio Nurul Jadid</string>
    <string name="title_activity_maps">Lokasi</string>
    <string name="title_activity_mapss">Peta Lokasi Alumni</string>
    <string name="title_activity_alumni">Daftar Alumni</string>
    <string name="title_activity_akun">Menu Akun</string>
    <string name="title_activity_pesan">Informasi Nurul Jadid</string>
    <string name="title_activity_Masukan">Masukan</string>
    <string name="title_activity_Cari_nama">Cari Nama Alumni</string>
    <string name="title_activity_Cari_Lokasi">Cari Lokasi Alumni</string>
    <string name="facebook_app_id">508377842833493</string>
    <string name="account_kit_client_token">e9c4b09dca897a6e888496f5574b169b</string>


    //firebase sms
    <string name="status_code_sent">Status = Mengirim Kode Verifikasi</string>
    <string name="status_verification_failed">Status =  Verifikasi Gagal</string>
    <string name="status_verification_succeeded">Status = Verifikasi Sukses</string>
    <string name="status_sign_in_failed">Status = Gagal Login</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Halaman Lupa Password Aplikasi NurJa Alumni</string>
    <string name="signed_out">Halaman Lupa Password Aplikasi NurJa Alumni</string>
    <string name="firebase_status_fmt">ID : %s</string>
    <string name="sign_out">Keluar</string>
    <string name="desc_firebase_lockup">name</string>
    <string name="phone_title_text">NurJa Alumni</string>

    //mapss
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    //fb kit
    <string name="action_bar_title_hello">Hello</string>
    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>
    <string name="title_activity_berita">berita</string>
    <string name="title_activity_daftar_menu">Daftar_menu</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_contoh">Map</string>
    <string name="title_activity_ccont">Map</string>
    <string name="title_activity_z">Map</string>
    <string name="title_activity_scrolll">Scrolll</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling__hp">ScrollingActivity_HP</string>
    <string name="title_activity_ver_alumni">Verifikasi Alumni</string>
    <string name="title_activity_tanggap">List Tanggapan Pesan Masukan</string>

    <string name="hint_phone_number">Nomer Telepon</string>
    <string name="hint_verification_code">Kode Verifikasi</string>
    <string name="start_phone_auth">Kirim SMS Verifikasi</string>
    <string name="verify_phone_auth">Verifikasi Kode</string>
    <string name="resend_phone_auth">Kirim Ulang SMS</string>


</resources>
